[workspace]
resolver = "3"
members = [
    "asky_lib", # lib
    "asky",     # main
]

[workspace.dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = "1.22.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.0+spec-1.1.0"
tokio = { version = "1.50.0", features = ["full"] }
proc-macro2 = "1.0.106"
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"] }
regex = "1.12.3"
