[package]
name = "asky"
version = "0.1.0+dev-1.21.11"
edition = "2024"

[lib]
name = "asky_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "asky"
path = "src/main.rs"

[dependencies]
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
